--- a/app/src/main/res/layout/view_header_main.xml
+++ b/app/src/main/res/layout/view_header_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:background="?attr/hd_backgroundColor"
+        android:background="?attr/weight_backgroundColor"
 
         android:paddingHorizontal="14dp"
         android:paddingVertical="10dp"
