--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="blue400">#8378FF</color>
     <color name="blue300">#B0A9FF</color>
     <color name="blue200">#E0DDFF</color>
-    <color name="blue100">#FAFAFF</color>
+    <color name="blue100">#F6F6FF</color>
 
     <color name="red400">#B81515</color>
     <color name="red300">#F64C4C</color>
