--- a/app/src/main/res/layout/activity_team_manage_selcect_team.xml
+++ b/app/src/main/res/layout/activity_team_manage_selcect_team.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.teamManagement.SelectTeamActivity">
+    tools:context=".ui.teamManagement.TeamSelectActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_main"
         android:layout_width="0dp"
         android:layout_height="0dp"
 
-        tools:listitem="@layout/row_team_manage_list_item"
+        tools:listitem="@layout/row_team_select_list_item"
 
 
         app:layout_constraintTop_toTopOf="parent"
