--- a/app/src/main/res/layout/activity_team_manage_selcect_team.xml
+++ b/app/src/main/res/layout/activity_team_manage_selcect_team.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.teamManagement.TeamSelectActivity">
 
+    <com.heechan.membeder.ui.view.header.NavigationHeader
+        android:id="@+id/hd_teamSelect"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
+        app:navigationTitle="팀 선택"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_main"
         android:layout_width="0dp"
@@ -14,7 +26,7 @@
         tools:listitem="@layout/row_team_select_list_item"
 
 
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hd_teamSelect"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
