--- a/app/src/main/res/layout/fragment_schedule_account.xml
+++ b/app/src/main/res/layout/fragment_schedule_account.xml
@@ -10,22 +10,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.signUp.SignUpActivity">
+        tools:context=".ui.schedule.ScheduleNameFragment">
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/nav_register"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/nv_register"
+            android:text="이름 입력"
 
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
