--- a/app/src/main/res/layout/fragment_sign_up_1.xml
+++ b/app/src/main/res/layout/fragment_sign_up_1.xml
@@ -9,9 +9,9 @@
             name="vm"
             type="com.heechan.membeder.ui.signUp.SignUpViewModel" />
 
-        <variable
-            name="signUp"
-            type="com.heechan.membeder.model.data.ui.SignUp" />
+<!--        <variable-->
+<!--            name="signUp"-->
+<!--            type="com.heechan.membeder.model.data.ui.SignUp" />-->
 
         <import type="com.heechan.membeder.util.LoginType"/>
     </data>
