--- a/app/src/main/res/layout/activity_schedule_add.xml
+++ b/app/src/main/res/layout/activity_schedule_add.xml
@@ -12,30 +12,30 @@
         android:layout_height="match_parent"
         tools:context=".ui.schedule.ScheduleAddActivity">
 
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/hd_scheduleAdd"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+<!--        <com.google.android.material.navigation.NavigationView-->
+<!--            android:id="@+id/hd_scheduleAdd"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
 
-            app:navigationTitle="일정추가"
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:navigationTitle="일정추가" />-->
 
         <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_schedule"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
 
             app:defaultNavHost="true"
-            app:navGraph="@navigation/nv_schedule_add"
-
-            app:layout_constraintTop_toBottomOf="@id/hd_scheduleAdd"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navGraph="@navigation/nv_schedule_add" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
