--- a/app/src/main/res/layout/fragment_home_no_team.xml
+++ b/app/src/main/res/layout/fragment_home_no_team.xml
@@ -73,6 +73,19 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_homeNoTram_subTitle"
             />
 
+        <View
+            android:id="@+id/line_homeNoTeam_hr"
+            android:layout_width="0dp"
+            android:layout_height="4dp"
+
+            android:background="@color/white500"
+
+            android:layout_marginTop="15dp"
+
+            app:layout_constraintTop_toBottomOf="@id/btn_homeNoTeam_gotoTeamBuilding"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
