--- a/app/src/main/res/layout/fragment_home_team.xml
+++ b/app/src/main/res/layout/fragment_home_team.xml
@@ -73,6 +73,36 @@
             app:layout_constraintEnd_toEndOf="@id/line_homeTeam_end"
             />
 
+        <View
+            android:id="@+id/line_homeNoTeam_hr"
+            android:layout_width="0dp"
+            android:layout_height="4dp"
+
+            android:background="@color/white500"
+
+            android:layout_marginTop="15dp"
+
+            app:layout_constraintTop_toBottomOf="@id/txt_homeTeam_subTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/btn_homeTeam_addSchedule"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:text="+ 일정 추가하기"
+            android:textSize="15sp"
+            android:textFontWeight="700"
+            android:gravity="center"
+
+            android:paddingVertical="24dp"
+
+            app:layout_constraintTop_toBottomOf="@id/line_homeNoTeam_hr"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
