--- a/app/src/main/res/navigation/nv_schedule_add.xml
+++ b/app/src/main/res/navigation/nv_schedule_add.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nv_schedule_add"
-    app:startDestination="@id/scheduleAccountFragment">
+    app:startDestination="@id/scheduleNameFragment">
 
     <fragment
         android:id="@+id/scheduleAccountFragment"
