--- a/app/src/main/res/layout/fragment_home_team.xml
+++ b/app/src/main/res/layout/fragment_home_team.xml
@@ -88,21 +88,49 @@
             />
 
         <TextView
+            android:id="@+id/txt_homeTeam_todoTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="해야할 일"
+            android:textSize="15sp"
+            android:textFontWeight="700"
+
+            android:layout_marginTop="24dp"
+
+            app:layout_constraintTop_toBottomOf="@id/line_homeNoTeam_hr"
+            app:layout_constraintStart_toStartOf="@id/line_homeTeam_start"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list_schedule"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            tools:listitem="@layout/row_schedule_list"
+            android:layout_marginTop="12dp"
+
+            app:layout_constraintTop_toBottomOf="@id/txt_homeTeam_todoTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
             android:id="@+id/btn_homeTeam_addSchedule"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            android:text="+ 일정 추가하기"
-            android:textSize="15sp"
-            android:textFontWeight="700"
             android:gravity="center"
-
             android:paddingVertical="24dp"
+            android:text="+ 일정 추가하기"
+            android:textFontWeight="700"
 
-            app:layout_constraintTop_toBottomOf="@id/line_homeNoTeam_hr"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="15sp"
+
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/list_schedule" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
