Team building list

--- a/app/src/main/res/layout/fragment_home_no_team.xml
+++ b/app/src/main/res/layout/fragment_home_no_team.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="vm"
-            type="com.heechan.membeder.ui.main.HomeViewModel" />
+            type="com.heechan.membeder.ui.main.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
