--- a/app/src/main/res/layout/fragment_home_team.xml
+++ b/app/src/main/res/layout/fragment_home_team.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="vm"
-            type="com.heechan.membeder.ui.main.HomeViewModel" />
+            type="com.heechan.membeder.ui.main.MainViewModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
