--- a/app/src/main/res/layout/fragment_team_building.xml
+++ b/app/src/main/res/layout/fragment_team_building.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="vm"
+            type="com.heechan.membeder.ui.main.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,16 +28,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list_teamBuilding_teamList"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
 
-            android:text="TeamBuilding Fragment"
-
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/hd_teamBuilding"
+            app:layout_constraintVertical_bias="1.0"
+            tools:listitem="@layout/row_team_select_list_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
