Team make navigation

--- a/app/src/main/res/layout/activity_team_make.xml
+++ b/app/src/main/res/layout/activity_team_make.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable
-            name="tmvm"
+            name="vm"
             type="com.heechan.membeder.ui.teamMake.TeamMakeViewModel" />
     </data>
 
@@ -15,14 +15,30 @@
         android:layout_height="match_parent"
         tools:context=".ui.teamMake.TeamMakeActivity">
 
-        <Button
-            android:id="@+id/teammake_test_btn"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="테스트"
+        <com.heechan.membeder.ui.view.header.NavigationHeader
+            android:id="@+id/hd_teamMake"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintEnd_toEndOf="parent"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationTitle="팀 만들기" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_teamMake"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+
+            app:defaultNavHost="true"
             app:layout_constraintBottom_toBottomOf="parent"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/hd_teamMake"
+            app:navGraph="@navigation/nv_team_make" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
