--- a/app/src/main/res/layout/activity_team_mange_main.xml
+++ b/app/src/main/res/layout/activity_team_mange_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.teamManagement.TeamManageMainActivity">
+    tools:context=".ui.team.management.TeamManageMainActivity">
 
     <Button
         android:id="@+id/btn_manage_ban"
