--- a/app/src/main/res/layout/fragment_team_name.xml
+++ b/app/src/main/res/layout/fragment_team_name.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.teamMake.TeamNameFragment">
+        tools:context=".ui.team.make.TeamNameFragment">
 
         <TextView
             android:id="@+id/txt"
